--- a/.gitignore
+++ b/.gitignore
@@ -284,6 +284,11 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+/.cache
+/.parcel-cache
+
+# production
+/dist
 
 # Visual Studio 6 build log
 *.plg
