--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.10.0",
     "posthtml-doctype": "^1.1.1",
     "posthtml-include": "^1.7.4",
-    "sass": "^1.43.4"
+    "sass": "^1.75.0"
   },
   "dependencies": {
     "@parcel/transformer-sass": "^2.10.0",
