fix: error unknow option out dir and index.js

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "practice-html-css",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./src/pages/index.html",
-    "build": "parcel build ./src/pages/index.html --out-dir public"
+    "build": "parcel build ./src/pages/index.html"
   },
   "keywords": [],
   "author": "",
